# hops

./: .gitignore  AGENTS.md  LICENSE  README.md  hops-spec.md  hops_ui_simple.md  index.html  package.json  picker.html  settings.html  vite.config.ts
.github/workflows/: pages.yml  release.yml
src/: App.css  App.tsx  ErrorBoundary.tsx  PickerWindow.css  PickerWindow.tsx  api.ts  main.tsx  picker-main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  picker.json
src-tauri/icons/: icon.icns
src-tauri/src/: browsers.rs  commands.rs  config.rs  lib.rs  main.rs  models.rs  picker.rs  registration.rs  routing.rs  tray.rs
src/components/common/: BrowserIcon.tsx  LoadingState.tsx  ModalShell.tsx  PatternTypePicker.tsx  StatusBanner.tsx
src/components/layout/: BottomStatusBar.tsx  ScrollTopButton.tsx  SidebarNav.tsx  Topbar.tsx
src/features/about/: AboutPanel.tsx  about.css
src/features/browsers/: BrowsersTab.tsx
src/features/onboarding/: OnboardingFlow.tsx
src/features/picker/: PickerBrowserList.tsx  PickerWindow.tsx  picker.css
src/features/router/: RouterTester.tsx
src/features/rules/: RulesTab.tsx  rules.css
src/features/settings/: SettingsTab.tsx
src/hooks/: useDocumentTheme.ts  useSidebarShortcut.ts
src/lib/: appTypes.ts  navigation.ts
src/services/: picker.ts  tauri.ts
src/styles/: App.css  base.css  common.css  layout.css  responsive.css  tokens.css
src/types/: index.ts
website/: index.html  vite.config.ts
website/src/: App.tsx  styles.css
